src/test/ui/union/union-fields-1.stderr
error: field is never read: `c`
  --> $DIR/union-fields-1.rs:6:5
   |
LL |     c: u8,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_c`
   |
   = note: the leading underscore helps signal to the reader that the field may still serve
           a purpose even if it isn't used in a way that we can detect (e.g. the field
           is only used through FFI or used only for its effect when dropped)
note: the lint level is defined here
  --> $DIR/union-fields-1.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: field is never read: `a`
  --> $DIR/union-fields-1.rs:9:5
   |
LL |     a: u8,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_a`
   |
   = note: the leading underscore helps signal to the reader that the field may still serve
           a purpose even if it isn't used in a way that we can detect (e.g. the field
           is only used through FFI or used only for its effect when dropped)

error: field is never read: `a`
  --> $DIR/union-fields-1.rs:13:20
   |
LL | union NoDropLike { a: u8 }
   |                    ^^^^^ help: if this is intentional, prefix it with an underscore: `_a`
   |
   = note: the leading underscore helps signal to the reader that the field may still serve
           a purpose even if it isn't used in a way that we can detect (e.g. the field
           is only used through FFI or used only for its effect when dropped)

error: field is never read: `c`
  --> $DIR/union-fields-1.rs:18:5
   |
LL |     c: u8,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_c`
   |
   = note: the leading underscore helps signal to the reader that the field may still serve
           a purpose even if it isn't used in a way that we can detect (e.g. the field
           is only used through FFI or used only for its effect when dropped)

error: aborting due to 4 previous errors

